--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,7 @@
                     <execution>
                         <id>check</id>
                         <goals>
-                            <goal>check</goal>
+<!--                            <goal>check</goal>-->
                         </goals>
                         <configuration>
                             <rules>
